k8s/apps/local/argo/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: argo-server
spec:
  template:
    spec:
      containers:
      - name: argo-server
        args:
        - server
        - --auth-mode
        - client
        - --auth-mode
        - sso
